samples/_failures_safe/1761317727_36f9c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5208ba1.c: In function ‘main’:
./samples/SAFE/__tmp_a5208ba1.c:176:5: error: expected expression at end of input
  176 |     size_t len =
      |     ^~~~~~
./samples/SAFE/__tmp_a5208ba1.c:176:5: error: expected declaration or statement at end of input
